--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   </ul>
 
   <p style="text-align: center;">
-    <a href="https://flaviengibs.github.io/nanocore/">← Back to Game</a>
+    <a href="https://flaviengibs.github.io/nanocore-game/">← Back to Game</a>
   </p>
 </body>
 </html>
